# Kiosk

./: .gitignore  CMakeLists.txt  Kiosk.lua  README.md  test.txt  xmake.lua
dependencies/: CMakeLists.txt
dependencies/osmanip/: CMakeLists.txt
include/: FileWatch.h  Keymap.h  Monitor.h  PlatformTypes.h  Process.h  ProcessManagement.h  ProcessManager.h  Rect.h  Settings.h  StartupChecks.h
src/: CMakeLists.txt  Source.cpp
src/linux/: Keymap.cpp  Monitor.cpp  Process.cpp  ProcessManagement.cpp  StartupChecks.cpp
src/windows/: Keymap.cpp  Monitor.cpp  Process.cpp  ProcessManagement.cpp  StartupChecks.cpp
